--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,8 @@
     "rust-analyzer.check.extraArgs": [
         "--target",
         "x86_64-unknown-none"
-    ]
+    ],
+    "rust-analyzer.checkOnSave.extraArgs": [
+        "--bins"
+    ],
 }
