--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,12 @@
-[workspace]
-resolver = "2"
-members = [
-    "kernel",
-]
+[package]
+name = "corrosium"
+version = "0.1.0"
+edition = "2021"
 
 [profile.dev]
 panic = "abort"
 
 [profile.release]
 panic = "abort"
+
+[dependencies]
