--- a/boot/Cargo.toml
+++ b/boot/Cargo.toml
@@ -1,6 +1,5 @@
-[package]
-name = "boot"
-version = "0.1.0"
-edition = "2021"
+[workspace]
 
-[dependencies]
+resolver = "2"
+
+members = ["stage1", "stage2"]
