--- a/kernel/Makefile
+++ b/kernel/Makefile
@@ -1,13 +1,20 @@
+UNAME = ${shell uname}
+ifeq (${UNAME}, Linux)
+	OBJCOPY = objcopy	
+endif
+ifeq (${UNAME}, Darwin)
+	OBJCOPY = ${shell brew --prefix binutils}/bin/objcopy	
+endif
+
 BUILD_DIR = build
 KERNEL = ${BUILD_DIR}/kernel.bin
 BUILD_MODE = release
-QEMU = qemu-system-x86_64
 
 .PHONY: setup always clean
 
 ${KERNEL}: setup
 	cargo build --${BUILD_MODE} --target=x86_32.json
-	objcopy -I elf32-i386 -O binary target/x86_32/${BUILD_MODE}/kernel $@
+	${OBJCOPY} -I elf32-i386 -O binary target/x86_32/${BUILD_MODE}/kernel $@
 
 setup: always
 	mkdir -p ${BUILD_DIR}
